# py_plate

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/py_plate/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py
